aggiunta esecuzione vecchio script

--- a/config.json
+++ b/config.json
@@ -1,22 +1,1 @@
-{
-    "pgs": [
-        {
-            "user": "badman",
-            "password": "19112546Aa",
-            "server": 1,
-            "premium": true,
-            "missionString": "DragonLair",
-            "allineamento": "buono",
-            "enabled": true
-        },
-        {
-            "user": "axel",
-            "password": "19112546Aa",
-            "server": 1,
-            "premium": true,
-            "missionString": "DragonLair",
-            "allineamento": "malvagio",
-            "enabled": false
-        }
-    ]
-}
+{"pgs": [{"user": "badman", "password": "19112546Aa", "server": "1", "premium": true, "mission_string": "DragonLair", "allineamento": "buono", "enabled": true}] }
